apply optimization on regular expressions (#1034)
* Move to expression subpackage

* Apply optimization on regular expression match

* Add more cases

* Add QuerySetting to control optimizer behaviour in configurable way

* Extract transformer from H2/MySQL/PG

* Add flag to control whether to optimize to startsWith/endsWith

* Uplift regular expression optimizer

* apply review comments