@@ -50,6 +50,7 @@ import org.bithon.server.datasource.reader.jdbc.statement.ast.QueryStageFunction
 import org.bithon.server.datasource.reader.jdbc.statement.ast.SelectStatement;
 import org.bithon.server.datasource.reader.jdbc.statement.builder.SelectStatementBuilder;
 import org.bithon.server.datasource.reader.mysql.MySQLSqlDialect;
+import org.bithon.server.datasource.reader.postgresql.PostgreSqlDialect;
 import org.bithon.server.datasource.store.IDataStoreSpec;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.Assertions;
@@ -146,12 +147,12 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       sum("totalCount") AS "t"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                GROUP BY "appName"
-                                """.trim(),
+                                    SELECT "appName",
+                                           sum("totalCount") AS "t"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    GROUP BY "appName"
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -176,12 +177,12 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       sum("totalCount" * 2) AS "t"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                GROUP BY "appName"
-                                """.trim(),
+                                    SELECT "appName",
+                                           sum("totalCount" * 2) AS "t"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    GROUP BY "appName"
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -209,13 +210,13 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
-                                       "appName",
-                                       sum("totalCount") AS "totalCount"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                GROUP BY "appName", "_timestamp"
-                                """.trim(),
+                                    SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                           "appName",
+                                           sum("totalCount") AS "totalCount"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    GROUP BY "appName", "_timestamp"
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -244,20 +245,20 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       CASE WHEN ( "totalCount" <> 0 ) THEN ( "_var0" / "totalCount" ) ELSE ( 0 ) END AS "avg"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("responseTime" * 2) AS "_var0",
-                                         sum("totalCount") AS "totalCount"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "_var0" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("responseTime" * 2) AS "_var0",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -288,20 +289,20 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       round(round(CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END, 2), 2) AS "avg"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("responseTime") AS "responseTime",
-                                         sum("totalCount") AS "totalCount"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           round(round(CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END, 2), 2) AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("responseTime") AS "responseTime",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -331,22 +332,22 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "_timestamp",
-                                       "appName",
-                                       "instanceName",
-                                       CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
-                                FROM
-                                (
-                                  SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
-                                         "appName",
-                                         "instanceName",
-                                         sum("responseTime") AS "responseTime",
-                                         sum("totalCount") AS "totalCount"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName", "_timestamp"
-                                )
-                                """.trim(),
+                                    SELECT "_timestamp",
+                                           "appName",
+                                           "instanceName",
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                    FROM
+                                    (
+                                      SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                             "appName",
+                                             "instanceName",
+                                             sum("responseTime") AS "responseTime",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName", "_timestamp"
+                                    )
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -381,31 +382,31 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "_timestamp",
-                                       "appName",
-                                       "instanceName",
-                                       CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
-                                FROM
-                                (
-                                  SELECT "_timestamp",
-                                         "appName",
-                                         "instanceName",
-                                         sum("responseTime") OVER (PARTITION BY "appName", "instanceName" ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "responseTime",
-                                         sum("totalCount") OVER (PARTITION BY "appName", "instanceName" ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "totalCount"
-                                  FROM
-                                  (
-                                    SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                    SELECT "_timestamp",
                                            "appName",
                                            "instanceName",
-                                           sum("responseTime") AS "responseTime",
-                                           sum("totalCount") AS "totalCount"
-                                    FROM "bithon_jvm_metrics"
-                                    WHERE ("timestamp" >= '2024-07-26T21:17:05.000+08:00') AND ("timestamp" < '2024-07-26T21:32:05.000+08:00')
-                                    GROUP BY "appName", "instanceName", "_timestamp"
-                                  )
-                                  WHERE ("_timestamp" >= 1722000120) AND ("_timestamp" < 1722000725)
-                                )
-                                """.trim(),
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "_timestamp",
+                                             "appName",
+                                             "instanceName",
+                                             sum("responseTime") OVER (PARTITION BY "appName", "instanceName" ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "responseTime",
+                                             sum("totalCount") OVER (PARTITION BY "appName", "instanceName" ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "totalCount"
+                                      FROM
+                                      (
+                                        SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                               "appName",
+                                               "instanceName",
+                                               sum("responseTime") AS "responseTime",
+                                               sum("totalCount") AS "totalCount"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= '2024-07-26T21:17:05.000+08:00') AND ("timestamp" < '2024-07-26T21:32:05.000+08:00')
+                                        GROUP BY "appName", "instanceName", "_timestamp"
+                                      )
+                                      WHERE ("_timestamp" >= 1722000120) AND ("_timestamp" < 1722000725)
+                                    )
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -439,25 +440,25 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "_timestamp",
-                                       CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
-                                FROM
-                                (
-                                  SELECT "_timestamp",
-                                         sum("responseTime") OVER (ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "responseTime",
-                                         sum("totalCount") OVER (ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "totalCount"
-                                  FROM
-                                  (
-                                    SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
-                                           sum("responseTime") AS "responseTime",
-                                           sum("totalCount") AS "totalCount"
-                                    FROM "bithon_jvm_metrics"
-                                    WHERE ("timestamp" >= '2024-07-26T21:17:05.000+08:00') AND ("timestamp" < '2024-07-26T21:32:05.000+08:00')
-                                    GROUP BY "_timestamp"
-                                  )
-                                  WHERE ("_timestamp" >= 1722000120) AND ("_timestamp" < 1722000725)
-                                )
-                                """.trim(),
+                                    SELECT "_timestamp",
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "_timestamp",
+                                             sum("responseTime") OVER (ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "responseTime",
+                                             sum("totalCount") OVER (ORDER BY "_timestamp" ASC RANGE BETWEEN 300 PRECEDING AND 0 FOLLOWING) AS "totalCount"
+                                      FROM
+                                      (
+                                        SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                               sum("responseTime") AS "responseTime",
+                                               sum("totalCount") AS "totalCount"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= '2024-07-26T21:17:05.000+08:00') AND ("timestamp" < '2024-07-26T21:32:05.000+08:00')
+                                        GROUP BY "_timestamp"
+                                      )
+                                      WHERE ("_timestamp" >= 1722000120) AND ("_timestamp" < 1722000725)
+                                    )
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -482,20 +483,20 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       round(CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END, 2) AS "avg"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("responseTime") AS "responseTime",
-                                         sum("totalCount") AS "totalCount"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           round(CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END, 2) AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("responseTime") AS "responseTime",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -530,22 +531,22 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       "count4xx" + "count5xx" AS "errorCount",
-                                       round(CASE WHEN ( "totalCount" <> 0 ) THEN ( (("count4xx" + "count5xx") * 100.0) / "totalCount" ) ELSE ( 0 ) END, 2) AS "errorRate"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("count4xx") AS "count4xx",
-                                         sum("count5xx") AS "count5xx",
-                                         sum("totalCount") AS "totalCount"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           "count4xx" + "count5xx" AS "errorCount",
+                                           round(CASE WHEN ( "totalCount" <> 0 ) THEN ( (("count4xx" + "count5xx") * 100.0) / "totalCount" ) ELSE ( 0 ) END, 2) AS "errorRate"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("count4xx") AS "count4xx",
+                                             sum("count5xx") AS "count5xx",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -580,20 +581,20 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       "a"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "a"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                )
-                                GROUP BY "appName", "instanceName", "a"
-                                HAVING "a" > 5
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           "a"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "a"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    )
+                                    GROUP BY "appName", "instanceName", "a"
+                                    HAVING "a" > 5
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -624,14 +625,14 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       argMin("activeThreads", "timestamp") AS "a",
-                                       argMax("activeThreads", "timestamp") AS "b"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
-                                GROUP BY "appName", "instanceName"
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           argMin("activeThreads", "timestamp") AS "a",
+                                           argMax("activeThreads", "timestamp") AS "b"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
+                                    GROUP BY "appName", "instanceName"
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -671,21 +672,21 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "_timestamp",
-                                       "appName",
-                                       "instanceName",
-                                       "activeThreads"
-                                FROM
-                                (
-                                  SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
-                                         "appName",
-                                         "instanceName",
-                                         FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "activeThreads"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                )
-                                GROUP BY "appName", "instanceName", "activeThreads", "_timestamp"
-                                """.trim(),
+                                    SELECT "_timestamp",
+                                           "appName",
+                                           "instanceName",
+                                           "activeThreads"
+                                    FROM
+                                    (
+                                      SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                             "appName",
+                                             "instanceName",
+                                             FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "activeThreads"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    )
+                                    GROUP BY "appName", "instanceName", "activeThreads", "_timestamp"
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -722,28 +723,28 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       CASE WHEN ( "totalThreads" <> 0 ) THEN ( "activeThreads" / "totalThreads" ) ELSE ( 0 ) END AS "ratio"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         "activeThreads",
-                                         sum("totalThreads") AS "totalThreads"
-                                  FROM
-                                  (
                                     SELECT "appName",
                                            "instanceName",
-                                           FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "activeThreads",
-                                           "totalThreads"
-                                    FROM "bithon_jvm_metrics"
-                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  )
-                                  GROUP BY "appName", "instanceName", "activeThreads"
-                                )
-                                ORDER BY "timestamp" asc
-                                """.trim(),
+                                           CASE WHEN ( "totalThreads" <> 0 ) THEN ( "activeThreads" / "totalThreads" ) ELSE ( 0 ) END AS "ratio"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             "activeThreads",
+                                             sum("totalThreads") AS "totalThreads"
+                                      FROM
+                                      (
+                                        SELECT "appName",
+                                               "instanceName",
+                                               FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "activeThreads",
+                                               "totalThreads"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      )
+                                      GROUP BY "appName", "instanceName", "activeThreads"
+                                    )
+                                    ORDER BY "timestamp" asc
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -775,21 +776,21 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       "activeThreads" / "totalThreads" AS "ratio"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         argMin("activeThreads", "timestamp") AS "activeThreads",
-                                         sum("totalThreads") AS "totalThreads"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                ORDER BY "timestamp" asc
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           "activeThreads" / "totalThreads" AS "ratio"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             argMin("activeThreads", "timestamp") AS "activeThreads",
+                                             sum("totalThreads") AS "totalThreads"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    ORDER BY "timestamp" asc
+                                    """.trim(),
                                 selectStatement.toSQL(clickHouseDialect));
 
         // Assert the SelectStatement object
@@ -827,28 +828,28 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       "totalThreads" - "activeThreads" AS "daemon"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("totalThreads") AS "totalThreads",
-                                         "activeThreads"
-                                  FROM
-                                  (
                                     SELECT "appName",
                                            "instanceName",
-                                           FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "activeThreads",
-                                           "totalThreads"
-                                    FROM "bithon_jvm_metrics"
-                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  )
-                                  GROUP BY "appName", "instanceName", "activeThreads"
-                                )
-                                ORDER BY "timestamp" asc
-                                """.trim(),
+                                           "totalThreads" - "activeThreads" AS "daemon"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("totalThreads") AS "totalThreads",
+                                             "activeThreads"
+                                      FROM
+                                      (
+                                        SELECT "appName",
+                                               "instanceName",
+                                               FIRST_VALUE("activeThreads") OVER (PARTITION BY (UNIX_TIMESTAMP("timestamp") / 600) * 600 ORDER BY "timestamp" ASC) AS "activeThreads",
+                                               "totalThreads"
+                                        FROM "bithon_jvm_metrics"
+                                        WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      )
+                                      GROUP BY "appName", "instanceName", "activeThreads"
+                                    )
+                                    ORDER BY "timestamp" asc
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -882,28 +883,28 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT `appName`,
-                                       `instanceName`,
-                                       `totalThreads` - `activeThreads` AS `daemon`
-                                FROM
-                                (
-                                  SELECT `appName`,
-                                         `instanceName`,
-                                         sum(`totalThreads`) AS `totalThreads`,
-                                         `activeThreads`
-                                  FROM
-                                  (
                                     SELECT `appName`,
                                            `instanceName`,
-                                           FIRST_VALUE(`activeThreads`) OVER (PARTITION BY (UNIX_TIMESTAMP(`timestamp`) DIV 600) * 600 ORDER BY `timestamp` ASC) AS `activeThreads`,
-                                           `totalThreads`
-                                    FROM `bithon_jvm_metrics`
-                                    WHERE (`timestamp` >= '2024-07-26T21:22:00.000+08:00') AND (`timestamp` < '2024-07-26T21:32:00.000+08:00')
-                                  ) AS `tbl0`
-                                  GROUP BY `appName`, `instanceName`, `activeThreads`
-                                ) AS `tbl1`
-                                ORDER BY `timestamp` asc
-                                """.trim(),
+                                           `totalThreads` - `activeThreads` AS `daemon`
+                                    FROM
+                                    (
+                                      SELECT `appName`,
+                                             `instanceName`,
+                                             sum(`totalThreads`) AS `totalThreads`,
+                                             `activeThreads`
+                                      FROM
+                                      (
+                                        SELECT `appName`,
+                                               `instanceName`,
+                                               FIRST_VALUE(`activeThreads`) OVER (PARTITION BY (UNIX_TIMESTAMP(`timestamp`) DIV 600) * 600 ORDER BY `timestamp` ASC) AS `activeThreads`,
+                                               `totalThreads`
+                                        FROM `bithon_jvm_metrics`
+                                        WHERE (`timestamp` >= '2024-07-26T21:22:00.000+08:00') AND (`timestamp` < '2024-07-26T21:32:00.000+08:00')
+                                      ) AS `tbl0`
+                                      GROUP BY `appName`, `instanceName`, `activeThreads`
+                                    ) AS `tbl1`
+                                    ORDER BY `timestamp` asc
+                                    """.trim(),
                                 selectStatement.toSQL(mysql));
 
         // Assert the SelectStatement object
@@ -940,24 +941,24 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "_timestamp",
-                                       "appName",
-                                       "instanceName",
-                                       "totalCount" / 10 AS "qps",
-                                       CASE WHEN ( "cardinality_var0" <> 0 ) THEN ( "totalCount" / "cardinality_var0" ) ELSE ( 0 ) END AS "qpsPerInstance"
-                                FROM
-                                (
-                                  SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
-                                         "appName",
-                                         "instanceName",
-                                         sum("totalCount") AS "totalCount",
-                                         count(distinct "instanceName") AS "cardinality_var0"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName", "_timestamp"
-                                )
-                                ORDER BY "appName" asc
-                                """.trim(),
+                                    SELECT "_timestamp",
+                                           "appName",
+                                           "instanceName",
+                                           "totalCount" / 10 AS "qps",
+                                           CASE WHEN ( "cardinality_var0" <> 0 ) THEN ( "totalCount" / "cardinality_var0" ) ELSE ( 0 ) END AS "qpsPerInstance"
+                                    FROM
+                                    (
+                                      SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                             "appName",
+                                             "instanceName",
+                                             sum("totalCount") AS "totalCount",
+                                             count(distinct "instanceName") AS "cardinality_var0"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName", "_timestamp"
+                                    )
+                                    ORDER BY "appName" asc
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -997,13 +998,13 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       count(distinct "instance") AS "instanceCount"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                GROUP BY "appName"
-                                ORDER BY "appName" asc
-                                """.trim(),
+                                    SELECT "appName",
+                                           count(distinct "instance") AS "instanceCount"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    GROUP BY "appName"
+                                    ORDER BY "appName" asc
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -1034,13 +1035,13 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       count(1) AS "cnt"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                GROUP BY "appName"
-                                ORDER BY "appName" asc
-                                """.trim(),
+                                    SELECT "appName",
+                                           count(1) AS "cnt"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    GROUP BY "appName"
+                                    ORDER BY "appName" asc
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -1082,13 +1083,13 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       count(1) AS "cnt"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00') AND (("bithon_jvm_metrics"."totalCount" > 1048576) AND ("bithon_jvm_metrics"."totalCount" < 3600) AND ("bithon_jvm_metrics"."totalCount" < 0.5))
-                                GROUP BY "appName"
-                                ORDER BY "appName" asc
-                                """.trim(),
+                                    SELECT "appName",
+                                           count(1) AS "cnt"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00') AND (("bithon_jvm_metrics"."totalCount" > 1048576) AND ("bithon_jvm_metrics"."totalCount" < 3600) AND ("bithon_jvm_metrics"."totalCount" < 0.5))
+                                    GROUP BY "appName"
+                                    ORDER BY "appName" asc
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -1126,21 +1127,21 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       CASE WHEN ( "totalCount" <> 0 ) THEN ( "_var0" / "totalCount" ) ELSE ( 0 ) END AS "avg"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("responseTime" * 2) AS "_var0",
-                                         sum("totalCount") AS "totalCount"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00') AND ("bithon_jvm_metrics"."appName" = 'bithon')
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                WHERE "avg" > 0.2
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "_var0" / "totalCount" ) ELSE ( 0 ) END AS "avg"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("responseTime" * 2) AS "_var0",
+                                             sum("totalCount") AS "totalCount"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00') AND ("bithon_jvm_metrics"."appName" = 'bithon')
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    WHERE "avg" > 0.2
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -1175,14 +1176,14 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       sum("totalCount") AS "cnt"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                GROUP BY "appName", "instanceName"
-                                HAVING "cnt" > 1000
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           sum("totalCount") AS "cnt"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    GROUP BY "appName", "instanceName"
+                                    HAVING "cnt" > 1000
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -1217,14 +1218,14 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       sum("totalCount") AS "totalCount"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                GROUP BY "appName", "instanceName"
-                                HAVING "totalCount" > 1000
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           sum("totalCount") AS "totalCount"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                    GROUP BY "appName", "instanceName"
+                                    HAVING "totalCount" > 1000
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -1263,22 +1264,22 @@ public class SelectStatementBuilderTest {
         // This is because the avgResponse is defined as DOUBLE,
         // and there's a type conversion in 'ExpressionTypeValidator'
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       "totalCount",
-                                       CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avgResponseTime"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("totalCount") AS "totalCount",
-                                         sum("responseTime") AS "responseTime"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                WHERE "avgResponseTime" > 5.0
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           "totalCount",
+                                           CASE WHEN ( "totalCount" <> 0 ) THEN ( "responseTime" / "totalCount" ) ELSE ( 0 ) END AS "avgResponseTime"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("totalCount") AS "totalCount",
+                                             sum("responseTime") AS "responseTime"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00')
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    WHERE "avgResponseTime" > 5.0
+                                    """.trim(),
                                 selectStatement.toSQL(h2Dialect));
 
         // Assert the SelectStatement object
@@ -1320,22 +1321,22 @@ public class SelectStatementBuilderTest {
         // This is because the avgResponse is defined as DOUBLE,
         // and there's a type conversion in 'ExpressionTypeValidator'
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       "instanceName",
-                                       "totalCount",
-                                       "responseTime" / "totalCount" AS "avgResponseTime"
-                                FROM
-                                (
-                                  SELECT "appName",
-                                         "instanceName",
-                                         sum("totalCount") AS "totalCount",
-                                         sum("responseTime") AS "responseTime"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
-                                  GROUP BY "appName", "instanceName"
-                                )
-                                WHERE "avgResponseTime" > 5.0
-                                """.trim(),
+                                    SELECT "appName",
+                                           "instanceName",
+                                           "totalCount",
+                                           "responseTime" / "totalCount" AS "avgResponseTime"
+                                    FROM
+                                    (
+                                      SELECT "appName",
+                                             "instanceName",
+                                             sum("totalCount") AS "totalCount",
+                                             sum("responseTime") AS "responseTime"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
+                                      GROUP BY "appName", "instanceName"
+                                    )
+                                    WHERE "avgResponseTime" > 5.0
+                                    """.trim(),
                                 selectStatement.toSQL(clickHouseDialect));
 
         // Assert the SelectStatement object
@@ -1367,13 +1368,13 @@ public class SelectStatementBuilderTest {
                                                                 .build();
 
         Assertions.assertEquals("""
-                                SELECT "appName",
-                                       sumMerge("clickedSum") AS "t1",
-                                       countMerge("clickedCnt") AS "t2"
-                                FROM "bithon_jvm_metrics"
-                                WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
-                                GROUP BY "appName"
-                                """.trim(),
+                                    SELECT "appName",
+                                           sumMerge("clickedSum") AS "t1",
+                                           countMerge("clickedCnt") AS "t2"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720))
+                                    GROUP BY "appName"
+                                    """.trim(),
                                 selectStatement.toSQL(clickHouseDialect));
 
         // Assert the SelectStatement object
@@ -1464,22 +1465,22 @@ public class SelectStatementBuilderTest {
                                                                 .schema(schema)
                                                                 .build();
         Assertions.assertEquals("""
-                                SELECT "_timestamp",
-                                       "appName",
-                                       sum("t1") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t1",
-                                       count("t2") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t2"
-                                FROM
-                                (
-                                  SELECT toUnixTimestamp(toStartOfInterval("timestamp", INTERVAL 10 SECOND)) AS "_timestamp",
-                                         "appName",
-                                         sumMerge("clickedSum") AS "t1",
-                                         countMerge("clickedCnt") AS "t2"
-                                  FROM "bithon_jvm_metrics"
-                                  WHERE ("timestamp" >= fromUnixTimestamp(1722000060)) AND ("timestamp" < fromUnixTimestamp(1722000720))
-                                  GROUP BY "appName", "_timestamp"
-                                )
-                                WHERE ("_timestamp" >= 1722000120) AND ("_timestamp" < 1722000720)
-                                """.trim(),
+                                    SELECT "_timestamp",
+                                           "appName",
+                                           sum("t1") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t1",
+                                           count("t2") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t2"
+                                    FROM
+                                    (
+                                      SELECT toUnixTimestamp(toStartOfInterval("timestamp", INTERVAL 10 SECOND)) AS "_timestamp",
+                                             "appName",
+                                             sumMerge("clickedSum") AS "t1",
+                                             countMerge("clickedCnt") AS "t2"
+                                      FROM "bithon_jvm_metrics"
+                                      WHERE ("timestamp" >= fromUnixTimestamp(1722000060)) AND ("timestamp" < fromUnixTimestamp(1722000720))
+                                      GROUP BY "appName", "_timestamp"
+                                    )
+                                    WHERE ("_timestamp" >= 1722000120) AND ("_timestamp" < 1722000720)
+                                    """.trim(),
                                 selectStatement.toSQL(clickHouseDialect));
 
         // Assert the SelectStatement object
@@ -1530,22 +1531,22 @@ public class SelectStatementBuilderTest {
         TimeSpan windowStart = innerStart.after(Duration.ofDays(1)).after(Duration.ofMinutes(1));
         TimeSpan windowEnd = innerEnd.after(Duration.ofDays(1));
         Assertions.assertEquals(StringUtils.format("""
-                                                   SELECT "_timestamp",
-                                                          "appName",
-                                                          sum("t1") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t1",
-                                                          count("t2") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t2"
-                                                   FROM
-                                                   (
-                                                     SELECT toUnixTimestamp(toStartOfInterval("timestamp", INTERVAL 10 SECOND)) + 86400 AS "_timestamp",
-                                                            "appName",
-                                                            sumMerge("clickedSum") AS "t1",
-                                                            countMerge("clickedCnt") AS "t2"
-                                                     FROM "bithon_jvm_metrics"
-                                                     WHERE ("timestamp" >= fromUnixTimestamp(%d)) AND ("timestamp" < fromUnixTimestamp(%d))
-                                                     GROUP BY "appName", "_timestamp"
-                                                   )
-                                                   WHERE ("_timestamp" >= %d) AND ("_timestamp" < %d)
-                                                   """.trim(),
+                                                       SELECT "_timestamp",
+                                                              "appName",
+                                                              sum("t1") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t1",
+                                                              count("t2") OVER (PARTITION BY "appName" ORDER BY "_timestamp" ASC RANGE BETWEEN 60 PRECEDING AND 0 FOLLOWING) AS "t2"
+                                                       FROM
+                                                       (
+                                                         SELECT toUnixTimestamp(toStartOfInterval("timestamp", INTERVAL 10 SECOND)) + 86400 AS "_timestamp",
+                                                                "appName",
+                                                                sumMerge("clickedSum") AS "t1",
+                                                                countMerge("clickedCnt") AS "t2"
+                                                         FROM "bithon_jvm_metrics"
+                                                         WHERE ("timestamp" >= fromUnixTimestamp(%d)) AND ("timestamp" < fromUnixTimestamp(%d))
+                                                         GROUP BY "appName", "_timestamp"
+                                                       )
+                                                       WHERE ("_timestamp" >= %d) AND ("_timestamp" < %d)
+                                                       """.trim(),
                                                    innerStart.getSeconds(),
                                                    innerEnd.getSeconds(),
                                                    windowStart.getSeconds(),
@@ -1570,10 +1571,10 @@ public class SelectStatementBuilderTest {
     }
 
     @Test
-    public void test_RegularExpressionMatch() {
+    public void test_RegularExpressionMatch_H2() {
         SelectStatement selectStatement = SelectStatementBuilder.builder()
-                                                                .sqlDialect(clickHouseDialect)
-                                                                .fields(Arrays.asList(new Selector(new ExpressionNode(schema, "sum(clickedSum)"), new Alias("t1"))))
+                                                                .sqlDialect(h2Dialect)
+                                                                .fields(List.of(new Selector(new ExpressionNode(schema, "sum(clickedSum)"), new Alias("t1"))))
                                                                 .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
                                                                                       TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800"),
                                                                                       Duration.ofSeconds(10),
@@ -1584,41 +1585,120 @@ public class SelectStatementBuilderTest {
                                                                 .schema(schema)
                                                                 .build();
 
-        {
-            Assertions.assertEquals("""
+        Assertions.assertEquals("""
+                                    SELECT UNIX_TIMESTAMP("timestamp")/ 10 * 10 AS "_timestamp",
+                                           "appName",
+                                           sum("clickedSum") AS "t1"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00') AND (regexp_like("bithon_jvm_metrics"."appName", 'bithon.*', 'nm') AND (NOT regexp_like("bithon_jvm_metrics"."instanceName", '192.*', 'nm')))
+                                    GROUP BY "appName", "_timestamp"
+                                    """.trim(),
+                                selectStatement.toSQL(h2Dialect));
+    }
+
+    @Test
+    public void test_RegularExpressionMatch_CK() {
+        SelectStatement selectStatement = SelectStatementBuilder.builder()
+                                                                .sqlDialect(clickHouseDialect)
+                                                                .fields(List.of(new Selector(new ExpressionNode(schema, "sum(clickedSum)"), new Alias("t1"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800"),
+                                                                                      Duration.ofSeconds(10),
+                                                                                      null,
+                                                                                      new IdentifierExpression("timestamp")))
+                                                                .filter(ExpressionASTBuilder.builder().build("appName =~ 'bithon.*' AND instanceName !~ '192.*'"))
+                                                                .groupBy(List.of("appName"))
+                                                                .schema(schema)
+                                                                .build();
+
+        Assertions.assertEquals("""
                                     SELECT toUnixTimestamp(toStartOfInterval("timestamp", INTERVAL 10 SECOND)) AS "_timestamp",
                                            "appName",
                                            sumMerge("clickedSum") AS "t1"
                                     FROM "bithon_jvm_metrics"
-                                    WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720)) AND ((regexp_like("bithon_jvm_metrics"."appName", 'bithon.*', 'nm')) AND (NOT regexp_like("bithon_jvm_metrics"."instanceName", '192.*', 'nm')))
+                                    WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720)) AND (match("bithon_jvm_metrics"."appName", 'bithon.*') AND (NOT match("bithon_jvm_metrics"."instanceName", '192.*')))
                                     GROUP BY "appName", "_timestamp"
                                     """.trim(),
-                                    selectStatement.toSQL(h2Dialect));
-        }
+                                selectStatement.toSQL(clickHouseDialect));
+    }
 
-        {
-            Assertions.assertEquals("""
+    @Test
+    public void test_RegularExpressionMatch_Optimized_CK() {
+        SelectStatement selectStatement = SelectStatementBuilder.builder()
+                                                                .sqlDialect(clickHouseDialect)
+                                                                .fields(List.of(new Selector(new ExpressionNode(schema, "sum(clickedSum)"), new Alias("t1"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800"),
+                                                                                      Duration.ofSeconds(10),
+                                                                                      null,
+                                                                                      new IdentifierExpression("timestamp")))
+                                                                .filter(ExpressionASTBuilder.builder().build("appName =~ '^bithon.*' AND instanceName !~ '^192.*'"))
+                                                                .groupBy(List.of("appName"))
+                                                                .schema(schema)
+                                                                .build();
+
+        Assertions.assertEquals("""
                                     SELECT toUnixTimestamp(toStartOfInterval("timestamp", INTERVAL 10 SECOND)) AS "_timestamp",
                                            "appName",
                                            sumMerge("clickedSum") AS "t1"
                                     FROM "bithon_jvm_metrics"
-                                    WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720)) AND ((match("bithon_jvm_metrics"."appName", 'bithon.*')) AND (NOT match("bithon_jvm_metrics"."instanceName", '192.*')))
+                                    WHERE ("timestamp" >= fromUnixTimestamp(1722000120)) AND ("timestamp" < fromUnixTimestamp(1722000720)) AND (startsWith("bithon_jvm_metrics"."appName", 'bithon') AND (NOT startsWith("bithon_jvm_metrics"."instanceName", '192')))
                                     GROUP BY "appName", "_timestamp"
                                     """.trim(),
-                                    selectStatement.toSQL(clickHouseDialect));
-        }
+                                selectStatement.toSQL(clickHouseDialect));
+    }
 
-        {
-            Assertions.assertEquals("""
-                                    SELECT toUnixTimestamp(toStartOfInterval("timestamp", INTERVAL 10 SECOND)) AS `_timestamp`,
+    @Test
+    public void test_RegularExpressionMatch_MySQL() {
+        SelectStatement selectStatement = SelectStatementBuilder.builder()
+                                                                .sqlDialect(mysql)
+                                                                .fields(List.of(new Selector(new ExpressionNode(schema, "sum(clickedSum)"), new Alias("t1"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800"),
+                                                                                      Duration.ofSeconds(10),
+                                                                                      null,
+                                                                                      new IdentifierExpression("timestamp")))
+                                                                .filter(ExpressionASTBuilder.builder().build("appName =~ 'bithon.*' AND instanceName !~ '192.*'"))
+                                                                .groupBy(List.of("appName"))
+                                                                .schema(schema)
+                                                                .build();
+
+        Assertions.assertEquals("""
+                                    SELECT UNIX_TIMESTAMP(`timestamp`) div 10 * 10 AS `_timestamp`,
                                            `appName`,
-                                           sumMerge(`clickedSum`) AS `t1`
+                                           sum(`clickedSum`) AS `t1`
                                     FROM `bithon_jvm_metrics`
-                                    WHERE (`timestamp` >= fromUnixTimestamp(1722000120)) AND (`timestamp` < fromUnixTimestamp(1722000720)) AND ((REGEXP_LIKE(`bithon_jvm_metrics`.`appName`, 'bithon.*')) AND (NOT REGEXP_LIKE(`bithon_jvm_metrics`.`instanceName`, '192.*')))
+                                    WHERE (`timestamp` >= '2024-07-26T21:22:00.000+08:00') AND (`timestamp` < '2024-07-26T21:32:00.000+08:00') AND (REGEXP_LIKE(`bithon_jvm_metrics`.`appName`, 'bithon.*') AND (NOT REGEXP_LIKE(`bithon_jvm_metrics`.`instanceName`, '192.*')))
                                     GROUP BY `appName`, `_timestamp`
                                     """.trim(),
-                                    selectStatement.toSQL(mysql));
-        }
+                                selectStatement.toSQL(mysql));
+    }
+
+    @Test
+    public void test_RegularExpressionMatch_PG() {
+        ISqlDialect pg = new PostgreSqlDialect();
+        SelectStatement selectStatement = SelectStatementBuilder.builder()
+                                                                .sqlDialect(pg)
+                                                                .fields(List.of(new Selector(new ExpressionNode(schema, "sum(clickedSum)"), new Alias("t1"))))
+                                                                .interval(Interval.of(TimeSpan.fromISO8601("2024-07-26T21:22:00.000+0800"),
+                                                                                      TimeSpan.fromISO8601("2024-07-26T21:32:00.000+0800"),
+                                                                                      Duration.ofSeconds(10),
+                                                                                      null,
+                                                                                      new IdentifierExpression("timestamp")))
+                                                                .filter(ExpressionASTBuilder.builder().build("appName =~ 'bithon.*' AND instanceName !~ '192.*'"))
+                                                                .groupBy(List.of("appName"))
+                                                                .schema(schema)
+                                                                .build();
+
+        Assertions.assertEquals("""
+                                    SELECT  FLOOR(EXTRACT(EPOCH FROM "timestamp" AT TIME ZONE 'UTC-8') / 10) * 10 AS "_timestamp",
+                                           "appName",
+                                           sum("clickedSum") AS "t1"
+                                    FROM "bithon_jvm_metrics"
+                                    WHERE ("timestamp" >= '2024-07-26T21:22:00.000+08:00') AND ("timestamp" < '2024-07-26T21:32:00.000+08:00') AND (("bithon_jvm_metrics"."appName" ~ 'bithon.*') AND (NOT ("bithon_jvm_metrics"."instanceName" ~ '192.*')))
+                                    GROUP BY "appName", "_timestamp"
+                                    """.trim(),
+                                selectStatement.toSQL(pg));
     }
 
     /**
